# llm-prettier

./: .gitignore  LICENSE  README.md  pyproject.toml  test_light.html
.github/workflows/: publish.yml
llm_prettier/: __init__.py  cli.py  core.py
llm_prettier/assets/: __init__.py  script.js  style.css  template.html
