[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-prettier"
version = "0.1.1"
description = "A generic JSON prettier and interactive HTML viewer, built especially for parsing embedded JSON from LLM payloads and responses."
readme = "README.md"
authors = [
  { name="Amaruki", email="krilinamar@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]
keywords = ["json", "llm", "viewer", "prettier", "debug", "ai", "openai", "anthropic", "gemini"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/amaruki/llm-prettier"
Repository = "https://github.com/amaruki/llm-prettier"
Issues = "https://github.com/amaruki/llm-prettier/issues"

[project.scripts]
llm-prettier = "llm_prettier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_prettier"]

[tool.hatch.build.targets.sdist]
include = [
    "/llm_prettier",
]
